@@ -16,6 +16,6 @@ EXTRA_DIST = wglBuffer.c wglBuffer.h
 
 libboard3d_la_SOURCES = drawboard3d.c font3d.c fun3d.h graph.c gtkcolour3d.c \
 			inc3d.h matrix.c matrix.h misc3d.c model.c model.h \
-			shadow.c types3d.h widget3d.c misc3d.h 
+			shadow.c types3d.h widget3d.c misc3d.h tr.c tr.h
 
 noinst_HEADERS = fun3d.h inc3d.h matrix.h model.h types3d.h 
